syntax = "proto3";

package math_problem;

option go_package = "github.com/nikita5637/quiz-registrator-api/pkg/pb/math_problem;mathproblem";

message MathProblem {
	int32 id = 1;
	int32 game_id = 2;
	string url = 3;
}

service Service {
	// CreateMathProblem adds new math problem
	rpc CreateMathProblem(CreateMathProblemRequest) returns (MathProblem) {
	}

	// SearchMathProblemByGameID returns math problem by game ID
	rpc SearchMathProblemByGameID(SearchMathProblemByGameIDRequest) returns (MathProblem) {
	}
}

message CreateMathProblemRequest {
	MathProblem math_problem = 1;
}

message SearchMathProblemByGameIDRequest {
	int32 game_id = 1;
}